[project]
name = "paynow-component-docs-mcp-server"
version = "0.0.2"
description = "Search PayNow Component documentation and return matching sections"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "OwlTing Group" }
]
maintainers = [
  { name = "George Chen", email = "george_chen@owlting.com" }
]

keywords = ["http", "mcp", "llm", "automation"]
license = { text = "MIT" }

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]

dependencies = [
  "mcp>=1.26.0",
  "pydantic>=2.0.0",
  "requests>=2.32.3",
  "starlette>=0.37.2",
  "uvicorn>=0.30.0",
]

[project.scripts]
paynow-component-docs-mcp-server = "paynow_component_docs_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pyright>=1.1.389",
  "ruff>=0.7.3",
]

